fix(UI): Fix extension of content across entire screen on mobile devices

--- a/app/src/ui/components/MemoListFilter/MemoListFilter.css
+++ b/app/src/ui/components/MemoListFilter/MemoListFilter.css
@@ -226,7 +226,8 @@
 }
 
 .filter-offcanvas {
-    padding-bottom: env(safe-area-inset-bottom, 0);
+    padding-top: env(safe-area-inset-top, calc(var(--spacing) * 2)) !important;
+    padding-bottom: calc(env(safe-area-inset-bottom, calc(var(--spacing) * 2)*2)) !important;
 
     & > nav {
         @apply w-full flex justify-center;
